--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -41,6 +41,14 @@ ATmega2560是高性能，低功耗基于Microchip 8位AVR RISC的微控制器(MC
 
 如图~\ref{fig:Mega2560-Power}，外部锂电通过PWRIN接口输入7-15v直流，两级滤波，使用小电容100nF滤除高频干扰，大电容47uF消除低频干扰，M7为二极管，防止错误输入负电压。低压差线性稳压(LDO)降压芯片LD1117S50CTR完成电平转换，输出5V直流，在输出端也加入了一个47uF的滤波电容，滤除输出5V中的低频谐波。
 
+高通滤波电容原本建议方案使用47uF 35V贴片型铝电解电容器，但是考虑到后续可能要堆叠电路板模块，需要尽可能的减小电路板上元件的最大高度，而6.3x5.4x5.4mm SMD 封装高度达到5.4mm。
+
+经过调研，换用CASE-E_7343封装47uF 35V钽电容\footnote{钽电容全称是钽电解电容，也属于电解电容的一种，使用金属钽做电介质。}。多数情况下，在不考虑容量和耐压时钽电解可以替换铝电解，但在耐受瞬态尖峰过压和瞬态大电流放电方面，钽电解不及铝电解，某些场合下的一些变通用法，会使电容两端施加小幅反向电压，钽电解也不可以这样。
+
+固体钽电容器电性能优良，工作温度范围宽，而且形式多样，体积效率优异，具有其独特的特征：钽电容器的工作介质是在钽金属表面生成的一层极薄的五氧化二钽膜。此层氧化膜介质与组成电容器的一端极结合成一个整体，不能单独存在。因此单位体积内所具有的电容量特别大。即比容量非常高，因此特别适宜于小型化。
+
+钽电容具有较大的ESR（串连等效电阻）值，瞬态大电流放电特性因而不佳，用于电源的主滤波是不行的，但其串连等效电感低于常见卷绕而成的铝电解，故高频滤波特性比铝电解好，适用于对付高频分量的辅助滤波。
+
 AVCC是端口F和A/D转换器的电源电压引脚。即使不使用ADC，它也应从外部连接到VCC。如果使用ADC，则应通过低通滤波器将其连接到VCC。
 
 LP2985-33DBVR则是另一个低压差线性稳压(LDO)，它将5V降到3.3V。根据Datasheet，在布线时，旁路电容器的放置应尽可能的接近器件的VIN和系统的GND，注意使旁路电容器连接VIN引脚和系统的GND引脚形成的环路面积最小。
