--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -43,9 +43,9 @@ ATmega2560是高性能，低功耗基于Microchip 8位AVR RISC的微控制器(MC
 
 高通滤波电容原本建议方案使用47uF 35V贴片型铝电解电容器，但是考虑到后续可能要堆叠电路板模块，需要尽可能的减小电路板上元件的最大高度，而6.3x5.4x5.4mm SMD 封装高度达到5.4mm。
 
-经过调研，换用CASE-E_7343封装47uF 35V钽电容\footnote{钽电容全称是钽电解电容，也属于电解电容的一种，使用金属钽做电介质。}。多数情况下，在不考虑容量和耐压时钽电解可以替换铝电解，但在耐受瞬态尖峰过压和瞬态大电流放电方面，钽电解不及铝电解，某些场合下的一些变通用法，会使电容两端施加小幅反向电压，钽电解也不可以这样。
+可以用CASE-E_7343封装47uF 35V钽电容\footnote{钽电容全称是钽电解电容，也属于电解电容的一种，使用金属钽做电介质}。多数情况下，在不考虑容量和耐压时钽电解可以替换铝电解，但在耐受瞬态尖峰过压和瞬态大电流放电方面，钽电解不及铝电解，某些场合下的一些变通用法，会使电容两端施加小幅反向电压，钽电解也不可以这样。
 
-固体钽电容器电性能优良，工作温度范围宽，而且形式多样，体积效率优异，具有其独特的特征：钽电容器的工作介质是在钽金属表面生成的一层极薄的五氧化二钽膜。此层氧化膜介质与组成电容器的一端极结合成一个整体，不能单独存在。因此单位体积内所具有的电容量特别大。即比容量非常高，因此特别适宜于小型化。
+固体钽电容器电性能优良，工作温度范围宽，而且形式多样，体积效率优异，具有其独特的特征：钽电容器的工作介质是在钽金属表面生成的一层极薄的五氧化二钽膜。此层氧化膜介质与组成电容器的一端极结合成一个整体，不能单独存在。因此单位体积内所具有的电容量特别大。即比容量非常高，因此特别适宜于小型化。但是钽电容
 
 钽电容具有较大的ESR（串连等效电阻）值，瞬态大电流放电特性因而不佳，用于电源的主滤波是不行的，但其串连等效电感低于常见卷绕而成的铝电解，故高频滤波特性比铝电解好，适用于对付高频分量的辅助滤波。
 
