--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -43,7 +43,7 @@ ATmega2560是高性能，低功耗基于Microchip 8位AVR RISC的微控制器(MC
 
 高通滤波电容原本建议方案使用47uF 35V贴片型铝电解电容器，但是考虑到后续可能要堆叠电路板模块，需要尽可能的减小电路板上元件的最大高度，而6.3x5.4x5.4mm SMD 封装高度达到5.4mm。
 
-可以用CASE-E_7343封装47uF 35V钽电容\footnote{钽电容全称是钽电解电容，也属于电解电容的一种，使用金属钽做电介质}。多数情况下，在不考虑容量和耐压时钽电解可以替换铝电解，但在耐受瞬态尖峰过压和瞬态大电流放电方面，钽电解不及铝电解，某些场合下的一些变通用法，会使电容两端施加小幅反向电压，钽电解也不可以这样。
+可以用CASE-E-7343封装47uF 35V钽电容\footnote{钽电容全称是钽电解电容，也属于电解电容的一种，使用金属钽做电介质}。多数情况下，在不考虑容量和耐压时钽电解可以替换铝电解，但在耐受瞬态尖峰过压和瞬态大电流放电方面，钽电解不及铝电解，某些场合下的一些变通用法，会使电容两端施加小幅反向电压，钽电解也不可以这样。
 
 固体钽电容器电性能优良，工作温度范围宽，而且形式多样，体积效率优异，具有其独特的特征：钽电容器的工作介质是在钽金属表面生成的一层极薄的五氧化二钽膜。此层氧化膜介质与组成电容器的一端极结合成一个整体，不能单独存在。因此单位体积内所具有的电容量特别大。即比容量非常高，因此特别适宜于小型化。但是钽电容
 
@@ -245,10 +245,18 @@ USB 3.1 C TYPE DIP+SMT CONN为USB Type-C 母头，按照USB2.0协议使用，后
 
 
 \section{电机驱动}
-
+之前使用的TB6612芯片近期国内断货，所以改用A4950、L293D等替代，但是没找到封装。
 
 \section{RGBLED}
 
+WS2812B是一个集控制电路与发光电路于一体的智能外控LED光源。其外型与一个5050LED灯珠相同，每个元件即为一个像素点。像素点内部包含了智能数字接口数据锁存信号整形放大驱动电路，还包含有高精度的内部振荡器和12V高压可编程定电流控制部分，有效保证了像素点光的颜色高度一致。
+
+数据协议采用单线归零码的通讯方式，像素点在上电复位以后，DIN端接受从控制器传输过来的数据，首先送过来的24bit数据被第一个像素点提取后，送到像素点内部的数据锁存器，剩余的数据经过内部整形处理电路整形放大后通过DO端口开始转发输出给下一个级联的像素点，每经过一个像素点的传输，信号减少24bit。像素点采用自动整形转发技术，使得该像素点的级联个数不受信号传送的限制，仅仅受限信号传输速度要求。
+
+LED具有低电压驱动，环保节能，亮度高，散射角度大，一致性好，超低功率，超长寿命等优点。将控制电路集成于LED上面，电路变得更加简单，体积小，安装更加简便。
+
+
+\section{通信模块}
 
 \section{扩展接口}
 
