--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -121,3 +121,5 @@
 
 \includepdf[pages={1-2}]{MEGA2560_Rev3e_sch.pdf}
 \includepdf[]{esp32-wroom-32_datasheet_cn_Inside.pdf}
+\includepdf[]{esp32_devkitc_v4-sch.pdf}
+\includepdf[]{ESP-WROVER-KIT_V4_1.pdf}
