--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@
 \input{data/Hardware.tex}
 \input{data/Platform.tex}
 \input{data/PCB.tex}
+\input{data/Environment.tex}
 \input{data/UI.tex}
 
 %%% 其它部分
