--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 
 \usepackage{lscape}     % for landscape table
 \usepackage[cache=false]{minted}  % 代码高亮
+% \definecolor{bg}{rgb}{0.95,0.95,0.95}  %代码背景颜色，使用[bgcolor=bg]参数使用此灰色背景。
+\usepackage{tcolorbox} % 用于绘制彩色文本框的宏包
 % 定义所有的图片文件在 figures 子目录下
 \graphicspath{{figures/}}
 
