--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -8,7 +8,7 @@
 
 \section{ESP 32开发环境配置}
 
-本节阐述搭建 ESP32 硬件开发的软件环境，软件编译和烧写流程如图~\ref{fig:ESP-Need}。
+本节阐述搭建 ESP32 硬件开发的软件环境，软件编译和烧写流程\footnote{\url{https://docs.espressif.com/projects/esp-idf/zh_CN/v4.0-rc/get-started/}}如图~\ref{fig:ESP-Need}。
 
 \begin{figure}[htbp]
     \centering
