--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -5,6 +5,28 @@
 
 \section{Mega 2560开发环境}
 
+本节参考了\url{https://www.arduino.cc/en/Hacking/HomePage}。
+
+\subsection{初次使用烧写固件}
+
+
+
+\subsection{Arduino IDE}
+
+本项目使用的ATmega2560-16AU和ATmega16U2-MU芯片组是Arduino IDE支持的，对应ARDUINO MEGA 2560 REV3开发板，因此，本开发环境将基于Arduino IDE(\url{https://www.arduino.cc/en/Main/Software})进行搭建。
+
+Arduino集成开发环境（Arduino IDE）包含了一个用于写代码的文本编辑器、一个消息区、一个文本控制台以及一个带有常用功能按钮和文本菜单的工具栏。连接Arduino之后，软件能给所连接的控制板上传程序，还能与控制板相互通信。
+
+使用Arduino软件（IDE）编写的代码被称为项目（sketches），这些项目写在文本编辑器中，以.ino的文件形式保存
+
+IDE UI中上传按钮的作用是编译代码并且上传到选定的控制板中，注意：如果你使用的是专门的编程器，你需要在点击按钮时按住电脑的“shift”键，显示的文字会变成“使用编程器上传”。
+
+在上传之前，需要在 Tools - Board 和 Tools - Port 中选定开发板类型和端口，在本项目中，选择Arduino/Genuino Mega 2560 (Arduino/Genuino Mega 2560
+An ATmega2560 running at 16 MHz with auto-reset, 16 Analog In, 54 Digital I/O and 15 PWM.)开发板。
+
+端口在WIndows系统中，串口显示为 COM1 或 COM2，USB则显示为COM3及以上，选择对应的端口即可。
+
+
 
 \section{ESP 32开发环境配置}
 
