--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -94,6 +94,28 @@ avrdude参数解释见表~\ref{tab:avrdude}
 
 更加具体的解释见\url{https://www.arduino.cc/en/Tutorial/ArduinoISP}
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Arduino-Fritzing.pdf}
+    \caption{Arduino Mega}
+    \label{fig:Arduino-Fritzing}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Arduino-Mega-UNO-Sketch.pdf}
+    \caption{Arduino-Mega-UNO-Sketch}
+    \label{fig:Arduino-Mega-UNO-Sketch}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Arduino-Mega-Mega-Sketch.pdf}
+    \caption{Arduino-Mega-Mega-Sketch}
+    \label{fig:Arduino-Mega-Mega-Sketch}
+\end{figure}
+
+
 \subsection{Arduino IDE}
 
 本项目使用的ATmega2560-16AU和ATmega16U2-MU芯片组是Arduino IDE支持的，对应ARDUINO MEGA 2560 REV3开发板，因此，本开发环境将基于Arduino IDE(\url{https://www.arduino.cc/en/Main/Software})进行搭建。
