--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -398,6 +398,23 @@ FT2232 多协议 USB 转串口桥接器。开发人员可通过 USB 接口对 FT
 
 在更成熟版本的开发中，还可以让FT2232的A路输出到Mega2560，B路输出到ESP32，实现一个芯片和USB口对两个芯片编程。
 
+
+\section{电机驱动及接口}
+
+使用JST端子(\url{https://en.wikipedia.org/wiki/JST_connector})作为电机线缆连接器
+
+每个代号都是一个系列的产品，他们最大的区别就是Pitch（间距）不一样。
+
+
+\section{电源接口}
+
+很多1S锂电池的接口是JST接口，JST接口防反插且很难拔下来，所以我们直接用JST作为我们的电源接口。
+
+PH 2.00 mm (0.079 in)
+
+
+
+
 \section{扩展接口}
 
 三明治扩展形式，层层堆叠。
