--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -405,6 +405,11 @@ FT2232 多协议 USB 转串口桥接器。开发人员可通过 USB 接口对 FT
 
 每个代号都是一个系列的产品，他们最大的区别就是Pitch（间距）不一样。
 
+驰海电机CHS-GM12-10BY 微型步进减速电机 2相4线 电机与轴同向倒装结构 DC5V ， 需要定制改变引线方向，现在默认的引线会蹭到轮子。
+
+CHW-GW12-N20VA永磁蜗轮蜗杆齿轮减速电机（有蜗杆改变90度传动方向），定制加装磁性霍尔编码盘，驱动电压5V，空载转速控制在60rpm
+
+驰海电机的JST端子均为ZH-1.5mm端子。
 
 \section{电源接口}
 
