--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -405,17 +405,21 @@ FT2232 多协议 USB 转串口桥接器。开发人员可通过 USB 接口对 FT
 
 每个代号都是一个系列的产品，他们最大的区别就是Pitch（间距）不一样。
 
-驰海电机CHS-GM12-10BY 微型步进减速电机 2相4线 电机与轴同向倒装结构 DC5V ， 需要定制改变引线方向，现在默认的引线会蹭到轮子。
+驰海电机CHS-GM12-10BY 微型步进减速电机 2相4线 电机与轴同向倒装结构 DC5V ， 需要定制改变引线方向，现在默认的引线会蹭到轮子。驰海电机CHS-GM12-10BY的JST端子为ZH-1.25mm端子。
 
-CHW-GW12-N20VA永磁蜗轮蜗杆齿轮减速电机（有蜗杆改变90度传动方向），定制加装磁性霍尔编码盘，驱动电压5V，空载转速控制在60rpm
+CHW-GW12-N20VA永磁蜗轮蜗杆齿轮减速电机（有蜗杆改变90度传动方向），定制加装磁性霍尔编码盘，驱动电压5V，空载转速控制在60rpm。驰海电机CHW-GW12-N20VA的JST端子为ZH-1.5mm端子。
 
-驰海电机的JST端子均为ZH-1.5mm端子。
+由于ZH接口不是通用接口，所以在PCB上，我们统一使用JST PH 2.0mm公头SMT贴片端子，灵活选用立式卧式端子座。
 
 \section{电源接口}
 
 很多1S锂电池的接口是JST接口，JST接口防反插且很难拔下来，所以我们直接用JST作为我们的电源接口。
 
-PH 2.00 mm (0.079 in)
+一般1S锂电PH2.0（PH 2.00 mm (0.079 in)）插口的一号脚为正极，但是1S锂电额定电压是3.7V，使用场景有限。
+
+选用450mAh 2s 7.4V锂电池，保证了电压大于6V、放电能力强劲、容量足够的同时做到电池体积最小化。\url{https://detail.tmall.com/item.htm?id=579993955200}
+
+2s锂电池的接口是JST SFHR 2Pin母头，需要使用 SM02B-SFHRS-TF(LF)(SN) 针脚座连接。如果没有此针脚座封装，可以自行改成PH2.0。
 
 
 
