--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -442,13 +442,13 @@ XBEE模块直接通过TX-RX和MCU通信，也可以选择直插式模块XBEE-Pro
 \begin{figure}
     \begin{minipage}{0.48\textwidth}
       \centering
-      \includegraphics[height=4cm]{xbee-zigbee-smt-XB24CZ7RIS-004.jpg}
-      \caption{Digi XBee ZigBee SMT, PCB Antenna}
+      \includegraphics[height=6cm]{xbee-zigbee-smt-XB24CZ7RIS-004.jpg}
+      \caption{Digi XBee ZigBee SMT}
       \label{fig:XB24CZ7RIS-004}
     \end{minipage}\hfill
     \begin{minipage}{0.48\textwidth}
       \centering
-      \includegraphics[height=4cm]{digi-xbee3-smt-pcb-hero.jpg}
+      \includegraphics[height=6cm]{digi-xbee3-smt-pcb-hero.jpg}
       \caption{Digi XBee3, PCB Ant, SMT}
       \label{fig:xbee3}
     \end{minipage}
@@ -456,5 +456,5 @@ XBEE模块直接通过TX-RX和MCU通信，也可以选择直插式模块XBEE-Pro
 
 \section{扩展接口}
 
-三明治扩展形式，层层堆叠。
+三明治扩展形式，层层堆叠，注意厚度。
 
