--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -400,10 +400,12 @@ FT2232 多协议 USB 转串口桥接器。开发人员可通过 USB 接口对 FT
 
 \section{电机驱动}
 
-
+步进电机驱动可以采用L6226QTR。
 
 如果未来搭建更大的平台，使用10A级别的电机可以使用ST powerSTEP01 (System-in-package integrating microstepping controller and
 10 A power MOSFETs) 作为2相步进电机驱动，在Altium Designer 20环境下也有相应的封装可用，目前平台较小，没有必要使用powerSTEP01。
+
+ST powerSTEP01可以放在额外的驱动板上，作为扩展板使用。ST powerSTEP01支持SPI串行通信。可以只通过一个SPI Bus总线控制多个电机。
 
 \section{电机接口}
 
