--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,7 @@
 \input{data/Platform.tex}
 \input{data/PCB.tex}
 \input{data/Environment.tex}
+\input{data/Program.tex}
 \input{data/UI.tex}
 
 %%% 其它部分
