ESP32-WROOM-32 UART

--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -394,6 +394,11 @@ FT2232 多协议 USB 转串口桥接器。开发人员可通过 USB 接口对 FT
 
 在更成熟版本的开发中，还可以让FT2232的A路输出到Mega2560，B路输出到ESP32，实现一个芯片和USB口对两个芯片编程。
 
+ESP32可以创建3个UART通信端口，其中UART0被烧写占用，UART1和2均可作为和Arduino通信的接口
+
+注意，ESP32-WROOM-32引脚对应图中GPIO和IO的编号不是对应的！
+
+ESP32-WROOM-32的17号引脚SHD/SD2*可以作为U1RXD，18号引脚SWP/SD3*可以作为U1TXD 
 \section{电机驱动}
 
 TB6612FNG\footnote{之前使用的TB6612芯片近期国内断货，所以改用A4950、L293D等替代，但是没找到封装。}是双H桥直流电机驱动器，该模块相对于传统的L298N效率上提高很多,体积上也大幅度减少。TB6612FNG每通道输出最高1.2 A的连续驱动电流，启动峰值电流达2A/3.2 A(连续脉冲/单脉冲)，4种电机控制模式：正转/反转/制动/停止，PWM支持频率高达100 kHz。
