ATmega2560-16AU AND ESP-WROOM-32 Communication Port

--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -1,7 +1,7 @@
 \chapter{PCB相关资料}
 \label{cha:Appendix-PCB}
 
-\section{引脚映射图}
+\section{Mega2560引脚映射}
 \label{sec:Pin2560}
 % Please add the following required packages to your document preamble:
 % \usepackage{longtable}
@@ -116,6 +116,10 @@
     \caption{Arduino Mega 2560 PIN mapping table}
     \label{tab:PinMap}\\
 \end{longtable}
+
+\section{ESP32-WROOM-32管脚定义}
+
+\includepdf[pages={8-9}]{esp32-wroom-32_datasheet_cn.pdf}
 
 \section{PCB原理图}
 
