XBee Mega2560 UART

--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -485,6 +485,8 @@ XBEE模块直接通过TX-RX和MCU通信，也可以选择直插式模块XBEE-Pro
     \end{minipage}
 \end{figure}
 
+为了XBee模块能和Mega2560串口通信，XBee模块的DIN/CONFIG/DIO14连接Mega2560的PD3 ( TXD1/INT3 ) Digital pin 18 (TX1)接口，DOUT/DIO13连接Mega2560的PD2 ( RXDI/INT2 ) Digital pin 19 (RX1)接口。
+
 \section{扩展接口}
 
 三明治扩展形式，层层堆叠，注意厚度。
