width=\columnwidth powerstep01.pdf

--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -452,7 +452,7 @@ SPI总线规定了4个保留逻辑信号接口：
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[]{powerstep01.pdf}
+    \includegraphics[width=\columnwidth]{powerstep01.pdf}
     \caption{ST powerSTEP01 Typical application schematic}
     \label{fig:powerstep01}
 \end{figure}
