--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -123,6 +123,8 @@
 
 \section{PCB原理图}
 
+% \includepdf[]{Misaka-v1.0.pdf} % ! LaTeX Error: Cannot determine size of graphic in figures/Misaka-v1.0.pdf (no BoundingBox).
+
 % \includepdf[pages={1-2}]{MEGA2560_Rev3e_sch.pdf}
 % \includepdf[]{esp32-wroom-32_datasheet_cn_Inside.pdf}
 % \includepdf[]{esp32_devkitc_v4-sch.pdf}
