--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -577,3 +577,10 @@ BOM中不属于JLC基础库的需要每种加20换料费，所有全贴片目前
     \caption{JLC-SMT-SIMU}
     \label{fig:JLC-SMT-SIMU}
 \end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.5\columnwidth]{Manufacture-v1.0.jpg}
+    \caption{Manufacture-v1.0}
+    \label{fig:Manufacture-v1.0}
+\end{figure}
