--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -122,8 +122,9 @@
 \includepdf[pages={8-9}]{esp32-wroom-32_datasheet_cn.pdf}
 
 \section{PCB原理图}
-
-% \includepdf[]{Misaka-v1.0.pdf} % ! LaTeX Error: Cannot determine size of graphic in figures/Misaka-v1.0.pdf (no BoundingBox).
+% ! LaTeX Error: Cannot determine size of graphic in figures/Misaka-v1.0.pdf (no BoundingBox).
+% 解决：去掉Misaka-v1.0.pdf的.0。在文件名中不能出现点。
+\includepdf[pages={1-2}]{Misaka-v1.pdf} 
 
 % \includepdf[pages={1-2}]{MEGA2560_Rev3e_sch.pdf}
 % \includepdf[]{esp32-wroom-32_datasheet_cn_Inside.pdf}
