--- a/data/Algorithm.tex
+++ b/data/Algorithm.tex
@@ -46,7 +46,7 @@
 
 在有向图中，可以通过对相应列的条目求和来计算顶点的入度，而可以通过对相应行的条目求和来计算顶点的出度。
 
-\begin{figure}
+\begin{figure}[htbp]
     \begin{minipage}{0.48\textwidth}
       \centering
       \includegraphics[height=7cm]{numbers.png}
