--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -52,7 +52,7 @@
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
-\begin{table}[]
+\begin{table}[htbp]
     \centering
     \begin{tabular}{@{}llll@{}}
     \toprule
@@ -93,7 +93,7 @@ Linux and Mac:
 
 avrdude参数解释见表~\ref{tab:avrdude}
 
-\begin{table}[]
+\begin{table}[htbp]
     \centering
     \begin{tabular}{ll}
     -C avrdude.conf                              & load the configuration file for using the Arduino Uno as programmer       \\
