--- a/data/Example.tex
+++ b/data/Example.tex
@@ -16,7 +16,7 @@
 
 各节点处机组参数与负荷如表~\ref{tab:example}：
 
-\begin{table}[]
+\begin{table}[htbp]
     \centering
 %    \resizebox{\textwidth}{!}{%
     \begin{tabular}{@{}ccccc@{}}
@@ -72,7 +72,7 @@
 
 数据如表~\ref{tab:Result-1234}所示。
 
-\begin{table}[]
+\begin{table}[htbp]
     \centering
     \begin{tabular}{|l|l|l|l|l|}
     \hline
@@ -107,7 +107,7 @@
 
 数据如表~\ref{tab:Result-1000}所示。
 
-\begin{table}[]
+\begin{table}[htbp]
     \centering
     \begin{tabular}{|l|l|l|l|l|}
     \hline
