--- a/data/Hardware.tex
+++ b/data/Hardware.tex
@@ -14,7 +14,7 @@
 
 初步的硬件平台，采用无线局域网通信，图~\ref{fig:wifi}为将AC8265和片状5GHz天线装到Jetson Nano Developer Kit上。
 
-\begin{figure}
+\begin{figure}[htbp]
     \begin{minipage}{0.48\textwidth}
       \centering
       \includegraphics[height=5cm]{DA4A3052.JPG}
