--- a/data/Intro.tex
+++ b/data/Intro.tex
@@ -7,7 +7,7 @@
 
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
-\begin{table}[]
+\begin{table}[htbp]
     \centering
     \begin{tabular}{|c|c|c|c|c|c|c|c|}
     \hline
@@ -114,7 +114,7 @@ Paxos 问题是指分布式的系统中存在故障（crash fault），但不存
 % Please add the following required packages to your document preamble:
 % \usepackage{lscape}
 \begin{landscape}
-    \begin{table}[]
+    \begin{table}[htbp]
     \centering
     \begin{tabular}{l|lllllll}
     \hline
