--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -469,9 +469,9 @@ SPI总线规定了4个保留逻辑信号接口：
 
 每个代号都是一个系列的产品，他们最大的区别就是Pitch（间距）不一样。
 
-驰海电机CHS-GM12-10BY 微型步进减速电机 2相4线 电机与轴同向倒装结构 DC5V ， 需要定制改变引线方向，现在默认的引线会蹭到轮子。驰海电机CHS-GM12-10BY的JST端子为ZH-1.25mm端子。
+驰海电机GM12-10BY 微型步进减速电机 2相4线 电机与轴同向倒装结构 DC5V ，需要定制改变引线方向，现在默认的引线会蹭到轮子。其JST端子为ZH-1.25mm端子。
 
-CHW-GW12-N20VA永磁蜗轮蜗杆齿轮减速电机（有蜗杆改变90度传动方向），定制加装磁性霍尔编码盘，驱动电压5V，空载转速控制在60rpm。驰海电机CHW-GW12-N20VA的JST端子为ZH-1.5mm端子。
+GW12-N20VA永磁蜗轮蜗杆齿轮减速电机（有蜗杆改变90度传动方向），定制加装磁性霍尔编码盘，驱动电压5V，空载转速控制在60rpm。其JST端子为ZH-1.5mm端子。
 
 由于ZH接口不是通用接口，所以在PCB上，我们统一使用JST PH 2.0mm公头SMT贴片端子，灵活选用立式卧式端子座。
 
