--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -580,7 +580,7 @@ BOM中不属于JLC基础库的需要每种加20换料费，所有全贴片目前
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[height=10cm]{Manufacture-v1.jpg}
+    \includegraphics[width=\columnwidth]{Manufacture-v1.jpg}
     \caption{Manufacture-v1}
     \label{fig:Manufacture-v1}
 \end{figure}
