MMT and TH XBee-3

--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -501,7 +501,9 @@ DIGI XBEE 3 MICRO FORM FACTOR (XB3-24Z8CM  Digi XBee 3 PRO ZigBee 3.0, 2.4 GHz, 
 
 XBEE模块直接通过TX-RX和MCU通信，也可以选择直插式模块XBEE-Pro用排针座连接到本项目主板上。模块选型见\url{https://www.digi.com/xbee}
 
-在Altium Designer 20环境下绘制的PCB选取了37 Pin 21.996x33.782mm Pitch 2.007mm的SMT表贴封装，同时兼容XBEE-3系列如XB3-24Z8PS(Digi XBee 3 PRO, 2.4 Ghz Zigbee 3.0, PCB Ant, SMT)和XBEE-S2C系列模块如XB24CZ7PIS-004(Digi XBee ZigBee SMT, PCB Antenna)，可以在PCB上直接更换，如图~\ref{fig:XB24CZ7RIS-004}和图~\ref{fig:xbee3}
+在Altium Designer 20环境下绘制的PCB选取了37 Pin 21.996x33.782mm Pitch 2.007mm的SMT表贴封装，同时兼容XBEE-3系列如XB3-24Z8PS(Digi XBee 3 PRO, 2.4 Ghz Zigbee 3.0, PCB Ant, SMT)和XBEE-S2C系列模块如XB24CZ7PIS-004(Digi XBee ZigBee SMT, PCB Antenna)，可以在PCB上直接更换，如图~\ref{fig:XB24CZ7RIS-004}和图~\ref{fig:xbee3}。
+
+测试时可以使用TH MT即通孔安装的封装，未来进一步小型化、SMT自动化可以使用MMT安装方式的封装即Digi XBee 3 Zigbee 3.0, 2.4 GHz, Micro来进一步减小体积。
 
 \begin{figure}
     \begin{minipage}{0.48\textwidth}
