--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -582,7 +582,16 @@ BOM中不属于JLC基础库的需要每种加20换料费，所有全贴片目前
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=\columnwidth]{Manufacture-v1.jpg}
+    \includegraphics[width=0.8\columnwidth]{Manufacture-v1.jpg}
     \caption{Manufacture-v1}
     \label{fig:Manufacture-v1}
+\end{figure}
+
+Test Board 3D仿真如图~\ref{fig:TestBoard3D}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{TestBoard3D.png}
+    \caption{Test Board 3D仿真}
+    \label{fig:TestBoard3D}
 \end{figure}
