--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -600,9 +600,16 @@ BOM中不属于JLC基础库的需要每种加20换料费，所有全贴片目前
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.8\columnwidth]{Manufacture-v1.jpg}
+    \includegraphics[width=0.8\columnwidth]{Manufacture-v1-1.png}
     \caption{Manufacture-v1}
-    \label{fig:Manufacture-v1}
+    \label{fig:Manufacture-v1-1}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\columnwidth]{Manufacture-v1-2.png}
+    \caption{Manufacture-v1-2}
+    \label{fig:Manufacture-v1-2}
 \end{figure}
 
 Test Board 3D仿真如图~\ref{fig:TestBoard3D}
