--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,7 @@
 \input{data/Environment.tex}
 \input{data/Program.tex}
 \input{data/UI.tex}
+\input{data/Communication.tex}
 
 %%% 其它部分
 \backmatter
